# openhive

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  biome.json  knip.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.playwright-mcp/: page-2026-04-19T13-01-28-457Z.yml  page-2026-04-19T13-01-57-799Z.yml  page-2026-04-19T13-03-44-010Z.yml  page-2026-04-19T13-03-55-864Z.yml  page-2026-04-19T13-04-38-828Z.yml  page-2026-04-19T13-05-51-397Z.yml  page-2026-04-19T13-06-23-567Z.yml  page-2026-04-19T13-06-31-891Z.yml  page-2026-04-19T13-08-51-213Z.yml  page-2026-04-19T13-09-03-670Z.yml  page-2026-04-19T13-09-16-442Z.yml  page-2026-04-19T13-09-28-929Z.yml  page-2026-04-19T13-11-00-058Z.yml  page-2026-04-19T13-12-16-010Z.yml  page-2026-04-19T13-16-27-739Z.yml  page-2026-04-19T13-33-11-439Z.yml  page-2026-04-19T13-38-24-909Z.yml  page-2026-04-19T13-39-26-403Z.yml  page-2026-04-19T13-43-19-652Z.yml  page-2026-04-19T14-02-20-756Z.yml  (+1 more)
apps/server/: .gitignore  README.md  pyproject.toml
apps/server/openhive/: config.py  main.py
apps/server/openhive/api/: frames.py  health.py  providers.py  runs.py  test_chat.py
apps/server/openhive/auth/: claude.py  codex.py  copilot.py  flows.py  pkce.py  providers.py
apps/server/openhive/engine/: __init__.py  providers.py  run.py  team.py
apps/server/openhive/events/: __init__.py  schema.py
apps/server/openhive/persistence/: crypto.py  db.py  tokens.py
apps/server/openhive/providers/: models.py
apps/server/openhive/proxy/: copilot.py
apps/server/openhive/tools/: __init__.py  base.py  formats.py
scripts/: release.mjs  (+1 more)
(+527 files in other folders)
